--- a/yummy-web/src/components/PageLayout/index.scss
+++ b/yummy-web/src/components/PageLayout/index.scss
@@ -26,6 +26,10 @@
       font-weight: 600;
       font-size: 16px;
       border: none;
+
+      svg {
+        font-size: 16px;
+      }
     }
 
     &--logo {
