--- a/yummy-web/src/styles/variables/_colors.scss
+++ b/yummy-web/src/styles/variables/_colors.scss
@@ -1,5 +1,7 @@
 :root {
   --color-primary: #F7A348;
   --color-secondary: #fefaf0;
-  --color-background: #f5f5f5;
+  --color-background: #fff;
+  --color-text: #5A4A3A;
+  --color-text-white: #fff;
 }
