--- a/yummy-web/src/styles/variables/_margin.scss
+++ b/yummy-web/src/styles/variables/_margin.scss
@@ -1,3 +1,10 @@
 :root {
+  --margin-xxs: 4px;
+  --margin-xs: 8px;
+  --margin-sm: 12px;
+  --margin: 16px;
+  --margin-md: 20px;
+  --margin-lg: 24px;
+  --margin-xl: 32px
   --margin-xxl: 48px;
 }
