--- a/yummy-web/src/styles/variables/_padding.scss
+++ b/yummy-web/src/styles/variables/_padding.scss
@@ -1,3 +1,10 @@
 :root {
-  --padding-xxl: 48px
+  --padding-xxs: 4px;
+  --padding-xs: 8px;
+  --padding-sm: 12px;
+  --padding: 16px;
+  --padding-md: 20px;
+  --padding-lg: 24px;
+  --padding-xl: 32px;
+  --padding-xxl: 48px;
 }
