--- a/yummy-web/src/pages/auth/index.scss
+++ b/yummy-web/src/pages/auth/index.scss
@@ -2,54 +2,81 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   overflow: hidden;
+  background-color: #FFFBEB;
+  background-image: url('../../assets/auth-background.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
-  &::before {
-    content: "";
-    position: absolute;
-    inset: -5%;
-    background: url('../../assets/login-background.png') center/cover no-repeat;
-    z-index: -1;
+  &__container {
+    overflow: hidden;
+    border: 1px solid var(--color-bg-secondary);
+    width: 380px;
+    border-radius: 16px;
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+
+  }
+
+  &__icon {
+    border-radius: 25%;
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   }
 
   &__content {
-    background-color: #FFFAF3;
-    padding: 32px;
-    border-radius: 16px;
-    border: 8px solid #f7a348;
+    background-color: var(--color-bg-secondary);
+    padding-top: var(--padding-xl);
+    padding-bottom: var(--padding-lg);
+    padding-left: var(--padding-xl);
+    padding-right: var(--padding-xl);
 
-    & input {
-      min-width: 350px;
+    .ant-form {
+      width: 100%;
     }
+  }
 
-    & .ant-form-item:last-child {
+  &__title {
+    .ant-typography {
       margin-bottom: 0;
     }
+
+    .ant-typography-secondary {
+      width: 300px;
+      text-align: center;
+    }
+  }
+
+  &__remember-me {
+    margin-bottom: var(--margin-lg);
+  }
+
+  &__divider {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
   }
 
   &__buttons {
     width: 100%;
 
-    & a {
-      color: #f7a348;
-      white-space: nowrap;
-
-      &:hover {
-        color: #ffc073;
-      }
+    .ant-btn {
+      font-size: var(--font-size-lg) !important;
     }
 
-    .ant-divider {
-      margin-top: 4px;
-      margin-bottom: 4px;
+    .vk-icon {
+      font-size: 22px !important;
+      margin-top: 3px !important;
+    }
+
+    .apple-icon {
+      margin-top: 3px !important;
     }
   }
 
-  &__title {
-    color: #f7a348 !important;
-    margin-bottom: 0 !important;
+  &__footer {
+    padding: var(--padding-lg) var(--padding-xl);
+    text-align: center;
+    background-color: var(--color-bg);
   }
-
 }
