--- a/yummy-web/src/styles/variables/_colors.scss
+++ b/yummy-web/src/styles/variables/_colors.scss
@@ -1,7 +1,18 @@
 :root {
+  --color-white: #fff;
+  // --color-primary: #F7A348;
+  // --color-secondary: #fefaf0;
+  // --color-background: #fff;
+  // --color-text: #5A4A3A;
+  // --color-text-white: #fff;
+
   --color-primary: #F7A348;
-  --color-secondary: #fefaf0;
-  --color-background: #fff;
-  --color-text: #5A4A3A;
-  --color-text-white: #fff;
+  --color-bg: #F9FAFB;
+  --color-bg-secondary: var(--color-white);
+  --color-text: #111827;
+  --color-text-white: var(--color-white);
+  --color-icon-secondary: rgba(0,0,0,.25);
+  --color-text-secondary: rgba(0,0,0,.45);
+  --color-primary-light: linear-gradient(180deg, #FFEDD5 0%, #FFF7ED 100%);
 }
+  
