add menu details page

--- a/yummy-web/src/styles/variables/_colors.scss
+++ b/yummy-web/src/styles/variables/_colors.scss
@@ -13,6 +13,7 @@
   --color-text-white: var(--color-white);
   --color-icon-secondary: rgba(0,0,0,.25);
   --color-text-secondary: rgba(0,0,0,.45);
-  --color-primary-light: linear-gradient(180deg, #FFEDD5 0%, #FFF7ED 100%);
+  --color-primary-light: #FEF6ED;
+  --color-primary-light-gradient: linear-gradient(180deg, #FFEDD5 0%, #FFF7ED 100%);
 }
   
