--- a/yummy-web/src/components/menu/MenuCard/index.scss
+++ b/yummy-web/src/components/menu/MenuCard/index.scss
@@ -1,11 +1,14 @@
 .menu-card {
   cursor: pointer;
 
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.2s ease-in-out;
+  transition: scale 0.2s ease-in-out;
+  transform-origin: center;
+  
   &:hover {
     scale: 1.01;
-    transition: scale 0.2s ease-in-out;
-    transform-origin: center;
-    transition: box-shadow 0.2s ease-in-out;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
   }
 
@@ -19,7 +22,7 @@
   &__avatar {
     height: 192px;
     width: 100%;
-    background: var(--color-primary-light);
+    background: var(--color-primary-light-gradient);
     display: flex !important;
     align-items: center;
     justify-content: center;
