--- a/yummy-web/src/components/core/PageLayout/index.scss
+++ b/yummy-web/src/components/core/PageLayout/index.scss
@@ -28,11 +28,16 @@
     }
      
 
+    &--avatar-wrap {
+      cursor: pointer;
+      display: inline-flex;
+      line-height: 0;
+    }
+
     &--avatar {
       background-color: var(--color-bg-secondary);
       border: 2px solid var(--color-primary);
       color: var(--color-primary);
-      cursor: pointer;
     }
 
     &--menu {
@@ -46,6 +51,51 @@
       svg {
         font-size: 16px;
       }
+    }
+
+    &--mobile-container {
+      display: flex;
+      padding-left: var(--padding-xl);
+      padding-right: var(--padding-xl);
+      height: 100%;
+
+      .ant-btn {
+        font-size: var(--font-size-lg);
+      }
+    }
+
+    &--mobile-drawer {
+      .page-layout__header--menu {
+        border-inline-end: none !important;
+      }
+
+      .ant-menu-item {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+        width: 100% !important;
+      }
+
+      .ant-drawer-header-title {
+        flex-direction: row-reverse;
+      }
+    }
+
+    &--mobile-drawer-content {
+      height: 100%;
+    }
+
+    &--mobile-profile {
+      .ant-avatar-string {
+        font-size: var(--font-size-lg);
+      }
+      .ant-typography {
+        font-size: var(--font-size);
+        color: var(--color-primary);
+      }
+    }
+
+    &--mobile-settings {
+      font-size: var(--font-size-lg);
     }
   }
 
