--- a/yummy-web/src/pages/auth/index.scss
+++ b/yummy-web/src/pages/auth/index.scss
@@ -1,3 +1,5 @@
+@use '@styles/variables/breakpoints' as bp;
+
 .auth-page {
   display: flex;
   align-items: center;
@@ -18,6 +20,14 @@
     border-radius: 16px;
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 
+    @include bp.below(400px) {
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      box-shadow: none;
+      border-radius: 0;
+    }
   }
 
   &__icon {
@@ -32,6 +42,14 @@
     padding-left: var(--padding-xl);
     padding-right: var(--padding-xl);
 
+    @include bp.below(400px) {
+      flex: 1;
+      min-height: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
     .ant-form {
       width: 100%;
     }
@@ -45,6 +63,10 @@
     .ant-typography-secondary {
       width: 300px;
       text-align: center;
+
+      @include bp.below-h(815px) {
+        display: none;
+      }
     }
   }
 
