--- a/yummy-web/src/pages/collections/List/index.scss
+++ b/yummy-web/src/pages/collections/List/index.scss
@@ -14,4 +14,19 @@
       }
     }
   }
+
+  // Текст кнопки скрыт на узких экранах через CSS (без мигания при первом рендере)
+  &__create-btn-text {
+    @include bp.below-xs {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      white-space: nowrap;
+      border: 0;
+    }
+  }
 }
