--- a/yummy-web/src/styles/_global.scss
+++ b/yummy-web/src/styles/_global.scss
@@ -1,1 +1,26 @@
 @use "default_variables";
+
+.card {
+  cursor: pointer;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.2s ease-in-out;
+  transition: scale 0.2s ease-in-out;
+  transform-origin: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  &:hover {
+    scale: 1.01;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  }
+
+  .ant-card-body {
+    flex: 1;
+  }
+
+  .ant-card-meta-title {
+    margin-bottom: var(--margin-sm) !important;
+  }
+}
