--- a/yummy-web/src/styles/variables/_colors.scss
+++ b/yummy-web/src/styles/variables/_colors.scss
@@ -15,5 +15,8 @@
   --color-text-secondary: rgba(0,0,0,.45);
   --color-primary-light: #FEF6ED;
   --color-primary-light-gradient: linear-gradient(180deg, #FFEDD5 0%, #FFF7ED 100%);
+  --color-success: #52c41a;
+  --color-warning: #faad14;
+  --color-error: #ff4d4f;
 }
   
