add not found page

--- a/yummy-web/src/components/core/PageLayout/index.scss
+++ b/yummy-web/src/components/core/PageLayout/index.scss
@@ -1,3 +1,5 @@
+@use '@styles/variables/breakpoints' as bp;
+
 .page-layout {
   min-height: 100vh;
 
@@ -9,7 +11,7 @@
     position: sticky;
     top: 0;
     z-index: 100;
-    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 6px var(--color-light-shadow);
 
     &--container {
       display: flex;
@@ -118,6 +120,20 @@
     max-width: 1440px;
     margin: 0 auto;
     box-sizing: border-box;
+  }
+
+  &__title {
+    margin-bottom: var(--margin);
+
+    .ant-typography {
+      margin-bottom: 0;
+    }
+
+    .ant-btn {
+      @include bp.below-xs {
+        aspect-ratio: 1;
+      }
+    }
   }
 }
 
