--- a/yummy-web/src/styles/variables/_colors.scss
+++ b/yummy-web/src/styles/variables/_colors.scss
@@ -18,5 +18,7 @@
   --color-success: #52c41a;
   --color-warning: #faad14;
   --color-error: #ff4d4f;
+  --color-light-gray: #EDEFF2;
+  --color-light-shadow: rgba(0, 0, 0, 0.1);
 }
   
